Add PolicySupervisorActorTest; fix unit tests.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>